[gd_scene load_steps=2 format=3 uid="uid://ltxvxekf42si"]

[ext_resource type="Script" path="res://code/WybierzAkcje.gd" id="1_506xi"]

[node name="WybierzAkcje" type="Node2D"]
script = ExtResource("1_506xi")

[node name="Bar" type="HBoxContainer" parent="."]
offset_left = 97.0
offset_top = 138.0
offset_right = 536.0
offset_bottom = 230.0

[node name="Label" type="Label" parent="Bar"]
layout_mode = 2
text = "Gracz [x]: [nazwa postaci]"

[node name="Action1" type="VBoxContainer" parent="Bar"]
layout_mode = 2

[node name="Action1label" type="Label" parent="Bar/Action1"]
layout_mode = 2
text = "Akcja 1
"

[node name="Action1choice" type="OptionButton" parent="Bar/Action1"]
layout_mode = 2
item_count = 5
popup/item_0/text = "podpatrz"
popup/item_0/id = 0
popup/item_1/text = "ruch"
popup/item_1/id = 1
popup/item_2/text = "przesunięcie"
popup/item_2/id = 2
popup/item_3/text = "pchnięcie"
popup/item_3/id = 3
popup/item_4/text = "[specjalna]"
popup/item_4/id = 4

[node name="Action2" type="VBoxContainer" parent="Bar"]
layout_mode = 2

[node name="Action2label" type="Label" parent="Bar/Action2"]
layout_mode = 2
text = "Akcja 2
"

[node name="Action2choice" type="OptionButton" parent="Bar/Action2"]
layout_mode = 2
item_count = 5
popup/item_0/text = "podpatrz"
popup/item_0/id = 0
popup/item_1/text = "ruch"
popup/item_1/id = 1
popup/item_2/text = "przesunięcie"
popup/item_2/id = 2
popup/item_3/text = "pchnięcie"
popup/item_3/id = 3
popup/item_4/text = "[specjalna]"
popup/item_4/id = 4

[connection signal="item_selected" from="Bar/Action1/Action1choice" to="." method="_on_action_1_choice_item_selected"]
[connection signal="item_selected" from="Bar/Action2/Action2choice" to="." method="_on_action_2_choice_item_selected"]
